# Rover_2019_2020

./: README.md
Electrical/: readme.txt
Electrical/Nodes/: arm_breakout_1.md  grasp.md  iris.md  motor.md  pan-tilt.md  readme.txt  science.md  tower-alt.md  tower.md
Electrical/Nodes/files/: arm_2.err
Electrical/Schematics/: 12v_power.SchDoc  3v3_linear_power.SchDoc  3v3_power.SchDoc  5V_power_4A.SchDoc  5v_power.SchDoc  Power_LEDs.SchDoc  mcu.SchDoc  readme.txt  reverse_protection.SchDoc  rs485_transceiver.SchDoc
software/: README.md  ground_station_setup.sh  rover_setup.sh
software/environment/rover/UDEV_rules/: 99-rover-cameras.rules  99-rover-chassis-camera.rules  99-rover-iris.rules  99-rover-usb-serial.rules  install_rules.sh
software/environment/rover/ZED_settings/: SN2129.conf
software/environment/rover/auto_poweroff/: auto_poweroff.py  auto_poweroff_test.py
software/environment/rover/startup/: screenrc  startup.sh
software/firmware/MR1819_science/: MR1819_science.ino
software/firmware/chassis_pan_tilt/: MR1819_chassis_pan_tilt.ino  chassis_pan_tilt.ino
software/firmware/freq_testing/: freq_testing.ino
software/firmware/grasping_end_effector/: grasping_end_effector.ino
software/firmware/gripper/: gripper.ino
software/firmware/iris/: iris.ino
software/firmware/libraries/Adafruit_BNO055_t3/: Adafruit_BNO055_t3.cpp  Adafruit_BNO055_t3.h
software/firmware/libraries/CSTS/: CSTS.h  README.md  average.h
software/firmware/libraries/modbus/: ModbusRtu.h
software/firmware/mining/: mining.ino
software/firmware/modbus_test/: modbus_test.ino
software/firmware/motor_driver/: New_Rover_Motor_Code.ino  motor_driver.ino
software/firmware/rdf/: rdf.ino
software/firmware/scale_tester/: scale_tester.ino
software/firmware/temp/: new_rdf.ino  original_rdf.ino
software/firmware/tower/: MR1819_tower.ino  tower.ino
software/firmware/tower_pan_tilt/: MR1819_tower_pan_tilt.ino  tower_pan_tilt.ino
software/ros_packages/: README.md  Readme.md
software/ros_packages/arTesting/: CMakeLists.txt  LICENSE  README.md  arTesting  package.xml  view_markers_kinect.rviz
software/ros_packages/arTesting/launch/: ARtrackUSB.launch  ar_follower.launch  ar_track_kinect.launch  usb_cam.launch
software/ros_packages/arTesting/src/: ar_tag_tracker.py
software/ros_packages/arTesting/urdf/: usb_cam.urdf
software/ros_packages/ar_track_alvar/: CMakeLists.txt
software/ros_packages/ar_track_alvar/launch/: pr2_indiv.launch
software/ros_packages/ar_track_alvar/nodes/: FindMarkerBundlesNoKinect.cpp  FindMarkerBundlesNoKinectStereo.cpp
software/ros_packages/ar_track_alvar/src/: Camera.cpp  MultiMarker.cpp
software/ros_packages/ground_station/: CMakeLists.txt  package.xml
software/ros_packages/ground_station/scripts/: .ground_station_launch.sh.swp  ground_station_launch.sh  set_arm_pose.py
software/ros_packages/ground_station/src/: .swp  Readme.md  ground_station.py  ground_station_new.py  key
software/ros_packages/mr1718-arm-urdf_export/: CMakeLists.txt  package.xml
software/ros_packages/mr1718-arm-urdf_export/config/: joint_names_mr1718-arm-urdf_export.yaml
software/ros_packages/mr1718-arm-urdf_export/launch/: display.launch  gazebo.launch
software/ros_packages/mr1718-arm-urdf_export/meshes/: elbow_link.STL  roll_link.STL  wrist_link.STL  wrist_roll_link.STL
software/ros_packages/mr1718-arm-urdf_export/robots/: mr1718-arm-urdf_export.urdf
software/ros_packages/mr1819-arm-config/: .setup_assistant  CMakeLists.txt  package.xml
software/ros_packages/mr1819-arm_urdf/: CMakeLists.txt  package.xml
software/ros_packages/mr1920_arm_urdf_export/: CMakeLists.txt  package.xml
software/ros_packages/rover_arm/: CMakeLists.txt  package.xml
software/ros_packages/rover_arm_ik/joint_parser/: CMakeLists.txt  package.xml
software/ros_packages/rover_arm_ik/joint_parser/msg/: ArmJointStates.msg
software/ros_packages/rover_arm_ik/joint_parser/src/: joint_remapper.cpp
software/ros_packages/rover_arm_ik/joint_parser/src/ignore/: WIPjoint_remapper.py  WIPjoint_trajectory_action_server.py  WIPmove_group_interface.cpp
software/ros_packages/rover_arm_ik/rover_arm_moveit_parser/: CMakeLists.txt  package.xml
software/ros_packages/rover_arm_ik/rover_arm_moveit_parser/msg/: ArmJointStates.msg
software/ros_packages/rover_arm_ik/rover_arm_moveit_parser/src/: joint_remapper.cpp  joint_state_remapper.py  moveit_interface.cpp  parse_joint_states.cpp
software/ros_packages/rover_arm_ik/stomp_core/: CMakeLists.txt
software/ros_packages/rover_arm_moveit_config/: .setup_assistant  README.md  package.xml
software/ros_packages/rover_arm_simulation/rover_arm_moveit_config/: .setup_assistant  CMakeLists.txt  README.md
software/ros_packages/rover_arm_simulation/rover_arm_moveit_config/config/: fake_controllers.yaml  stomp_planning.yaml
software/ros_packages/rover_arm_simulation/rover_arm_moveit_config/launch/: fake_moveit_controller_manager.launch.xml  move_group.launch  moveit.rviz  ompl_planning_pipeline.launch.xml  rover_arm_moveit_controller_manager.launch.xml  sensor_manager.launch.xml  stomp_planning_pipeline.launch.xml  trajectory_execution.launch.xml
software/ros_packages/rover_camera/: CMakeLists.txt  package.xml
software/ros_packages/rover_camera/launch/: example.launch
software/ros_packages/rover_camera/msg/: CameraControlMessage.msg
software/ros_packages/rover_camera/src/: rover_camera.cpp  rover_camera_old.cpp
software/ros_packages/rover_control/: CMakeLists.txt  package.xml
software/ros_packages/rover_main/: CMakeLists.txt  package.xml
software/ros_packages/rover_odometry/: CMakeLists.txt  package.xml
software/ros_packages/rover_science/: CMakeLists.txt  package.xml
software/ros_packages/rover_status/: CMakeLists.txt  package.xml
software/ros_packages/zed_wrapper/: README.md
software/scripts/: equipment_servicing_interface.py
software/testing/: joystick_drive_test.py  rdf_data_processing.py  ubiradio_testing.py  udp_debug.py
software/testing/nav_testing/: gps_imu_data_2018-02-01-05-31-34.bag  nav.launch  rviz config.rviz
(+230 files in other folders)
