<?xml version="1.0"?>
<package>
  <name>ar_tag_toolbox</name>
  <version>0.0.0</version>
  <description>The test_blah package</description>


  <maintainer email="andrew.dahdouh@gmail.com">Andrew Dahdouh</maintainer>


  <license>BSD</license>


  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>ar_track_alvar</build_depend>
  <build_depend>ar_track_alvar_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <run_depend>ar_track_alvar</run_depend>
  <run_depend>ar_track_alvar_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
